--- a/console/pom.xml
+++ b/console/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rabc</artifactId>
+        <artifactId>rbac</artifactId>
         <groupId>com.cgeel</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -17,12 +17,6 @@
         <env>dev</env>
     </properties>
     <dependencies>
-
-        <dependency>
-            <groupId>com.cgeel.demo</groupId>
-            <artifactId>service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <!-- test -->
         <dependency>
             <groupId>junit</groupId>
@@ -95,6 +89,11 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.10-FINAL</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cgeel</groupId>
+            <artifactId>service</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
